// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules -> sounds addSound id = ordinal position by filename alpha 1`] = `
Array [
  Object {
    "basename": "fake_sound_0.mp3",
    "filename": "/tmp/fake_sound_0.mp3",
    "id": "0",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 2`] = `
Array [
  Object {
    "basename": "a_fake_sound_0.mp3",
    "filename": "/tmp/a_fake_sound_0.mp3",
    "id": "0",
  },
  Object {
    "basename": "fake_sound_0.mp3",
    "filename": "/tmp/fake_sound_0.mp3",
    "id": "1",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 3`] = `
Array [
  Object {
    "level": "info",
    "message": "add sounds",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"add sounds\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 4`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "sounds": Array [],
    },
    "service": Object {
      "method": "getSounds",
      "name": "SoundService",
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getSounds\\"},\\"message\\":{\\"sounds\\":[]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 5`] = `
Array [
  Object {
    "level": "debug",
    "message": Object {
      "filename": "/tmp/fake_sound_0.mp3",
    },
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\"},\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 6`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "filename": "/tmp/fake_sound_0.mp3",
      "sounds": Array [
        Object {
          "basename": "fake_sound_0.mp3",
          "filename": "/tmp/fake_sound_0.mp3",
          "id": "1",
        },
      ],
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"fake_sound_0.mp3\\"}]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 7`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "sounds": Array [
        Object {
          "basename": "fake_sound_0.mp3",
          "filename": "/tmp/fake_sound_0.mp3",
          "id": "1",
        },
      ],
    },
    "service": Object {
      "method": "getSounds",
      "name": "SoundService",
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getSounds\\"},\\"message\\":{\\"sounds\\":[{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"fake_sound_0.mp3\\"}]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 8`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "sounds": Array [
        Object {
          "basename": "fake_sound_0.mp3",
          "filename": "/tmp/fake_sound_0.mp3",
          "id": "1",
        },
      ],
    },
    "service": Object {
      "method": "getSounds",
      "name": "SoundService",
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getSounds\\"},\\"message\\":{\\"sounds\\":[{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"fake_sound_0.mp3\\"}]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 9`] = `
Array [
  Object {
    "level": "debug",
    "message": Object {
      "filename": "/tmp/a_fake_sound_0.mp3",
    },
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"/tmp/a_fake_sound_0.mp3\\"},\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 10`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "filename": "/tmp/a_fake_sound_0.mp3",
      "sounds": Array [
        Object {
          "basename": "a_fake_sound_0.mp3",
          "filename": "/tmp/a_fake_sound_0.mp3",
          "id": "0",
        },
        Object {
          "basename": "fake_sound_0.mp3",
          "filename": "/tmp/fake_sound_0.mp3",
          "id": "1",
        },
      ],
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"/tmp/a_fake_sound_0.mp3\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/a_fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"a_fake_sound_0.mp3\\"},{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"1\\",\\"basename\\":\\"fake_sound_0.mp3\\"}]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 11`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "sounds": Array [
        Object {
          "basename": "a_fake_sound_0.mp3",
          "filename": "/tmp/a_fake_sound_0.mp3",
          "id": "0",
        },
        Object {
          "basename": "fake_sound_0.mp3",
          "filename": "/tmp/fake_sound_0.mp3",
          "id": "1",
        },
      ],
    },
    "service": Object {
      "method": "getSounds",
      "name": "SoundService",
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getSounds\\"},\\"message\\":{\\"sounds\\":[{\\"filename\\":\\"/tmp/a_fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"a_fake_sound_0.mp3\\"},{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"1\\",\\"basename\\":\\"fake_sound_0.mp3\\"}]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 12`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "sounds": Array [
        Object {
          "basename": "a_fake_sound_0.mp3",
          "filename": "/tmp/a_fake_sound_0.mp3",
          "id": "0",
        },
        Object {
          "basename": "fake_sound_0.mp3",
          "filename": "/tmp/fake_sound_0.mp3",
          "id": "1",
        },
      ],
    },
    "service": Object {
      "method": "getSounds",
      "name": "SoundService",
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getSounds\\"},\\"message\\":{\\"sounds\\":[{\\"filename\\":\\"/tmp/a_fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"a_fake_sound_0.mp3\\"},{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"1\\",\\"basename\\":\\"fake_sound_0.mp3\\"}]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds createWatch add, adds 1`] = `
Array [
  Object {
    "level": "info",
    "message": "add sounds",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"add sounds\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`modules -> sounds createWatch add, adds 2`] = `
Array [
  Object {
    "level": "debug",
    "message": Object {
      "filename": "add test",
    },
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"add test\\"},\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds createWatch add, adds 3`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "filename": "add test",
      "sounds": Array [
        Object {
          "basename": "add test",
          "filename": "add test",
          "id": "0",
        },
      ],
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"add test\\",\\"sounds\\":[{\\"filename\\":\\"add test\\",\\"id\\":\\"0\\",\\"basename\\":\\"add test\\"}]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds createWatch add, adds 4`] = `
Array [
  Object {
    "level": "debug",
    "message": "watch:add",
    "path": "add test",
    Symbol(level): "debug",
    Symbol(message): "{\\"path\\":\\"add test\\",\\"message\\":\\"watch:add\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds createWatch delete, removes 1`] = `
Array [
  Object {
    "level": "info",
    "message": "add sounds",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"add sounds\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`modules -> sounds createWatch delete, removes 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(remove test)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(remove test)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds createWatch delete, removes 3`] = `
Array [
  Object {
    "level": "debug",
    "message": "watch:delete",
    "path": "remove test",
    Symbol(level): "debug",
    Symbol(message): "{\\"path\\":\\"remove test\\",\\"message\\":\\"watch:delete\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds createWatch wires add and delete on instantiation 1`] = `
Array [
  "add",
  [Function],
]
`;

exports[`modules -> sounds createWatch wires add and delete on instantiation 2`] = `
Array [
  "delete",
  [Function],
]
`;

exports[`modules -> sounds createWatch wires add and delete on instantiation 3`] = `
Array [
  Object {
    "level": "info",
    "message": "add sounds",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"add sounds\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('') 1`] = `undefined`;

exports[`modules -> sounds getBySoundId getBySoundId('') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId()",
    "result": undefined,
    "service": Object {
      "method": "getBySoundId",
      "name": "SoundService",
    },
    "soundId": "",
    Symbol(level): "debug",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getBySoundId\\"},\\"soundId\\":\\"\\",\\"message\\":\\"getBySoundId()\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('0') 1`] = `
Object {
  "basename": "fake_sound_0.mp3",
  "filename": "/tmp/fake_sound_0.mp3",
  "id": "0",
}
`;

exports[`modules -> sounds getBySoundId getBySoundId('0') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId(0)",
    "result": Object {
      "basename": "fake_sound_0.mp3",
      "filename": "/tmp/fake_sound_0.mp3",
      "id": "0",
    },
    "service": Object {
      "method": "getBySoundId",
      "name": "SoundService",
    },
    "soundId": "0",
    Symbol(level): "debug",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getBySoundId\\"},\\"result\\":{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"fake_sound_0.mp3\\"},\\"soundId\\":\\"0\\",\\"message\\":\\"getBySoundId(0)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('dog') 1`] = `undefined`;

exports[`modules -> sounds getBySoundId getBySoundId('dog') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId(dog)",
    "result": undefined,
    "service": Object {
      "method": "getBySoundId",
      "name": "SoundService",
    },
    "soundId": "dog",
    Symbol(level): "debug",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getBySoundId\\"},\\"soundId\\":\\"dog\\",\\"message\\":\\"getBySoundId(dog)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('null') 1`] = `undefined`;

exports[`modules -> sounds getBySoundId getBySoundId('null') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId(null)",
    "result": undefined,
    "service": Object {
      "method": "getBySoundId",
      "name": "SoundService",
    },
    "soundId": null,
    Symbol(level): "debug",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getBySoundId\\"},\\"soundId\\":null,\\"message\\":\\"getBySoundId(null)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('undefined') 1`] = `undefined`;

exports[`modules -> sounds getBySoundId getBySoundId('undefined') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId(undefined)",
    "result": undefined,
    "service": Object {
      "method": "getBySoundId",
      "name": "SoundService",
    },
    "soundId": undefined,
    Symbol(level): "debug",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getBySoundId\\"},\\"message\\":\\"getBySoundId(undefined)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getSounds no sounds 1`] = `
Array [
  Object {
    "level": "info",
    "message": "add sounds",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"add sounds\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`modules -> sounds getSounds no sounds 2`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "sounds": Array [],
    },
    "service": Object {
      "method": "getSounds",
      "name": "SoundService",
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getSounds\\"},\\"message\\":{\\"sounds\\":[]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds getSounds two sounds 1`] = `
Array [
  Object {
    "basename": "a_fake_sound.mp3",
    "filename": "/tmp/a_fake_sound.mp3",
    "id": "0",
  },
  Object {
    "basename": "fake_sound_0.mp3",
    "filename": "/tmp/fake_sound_0.mp3",
    "id": "1",
  },
]
`;

exports[`modules -> sounds getSounds two sounds 2`] = `
Array [
  Object {
    "level": "silly",
    "message": Object {
      "sounds": Array [
        Object {
          "basename": "a_fake_sound.mp3",
          "filename": "/tmp/a_fake_sound.mp3",
          "id": "0",
        },
        Object {
          "basename": "fake_sound_0.mp3",
          "filename": "/tmp/fake_sound_0.mp3",
          "id": "1",
        },
      ],
    },
    "service": Object {
      "method": "getSounds",
      "name": "SoundService",
    },
    Symbol(level): "silly",
    Symbol(message): "{\\"service\\":{\\"name\\":\\"SoundService\\",\\"method\\":\\"getSounds\\"},\\"message\\":{\\"sounds\\":[{\\"filename\\":\\"/tmp/a_fake_sound.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"a_fake_sound.mp3\\"},{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"1\\",\\"basename\\":\\"fake_sound_0.mp3\\"}]},\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 1`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(a)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(a)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 2`] = `
Array [
  Object {
    "level": "silly",
    "message": "removeSound(a)",
    "sounds": Array [
      Object {
        "basename": "b",
        "filename": "b",
        "id": "0",
      },
      Object {
        "basename": "c",
        "filename": "c",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"removeSound(a)\\",\\"sounds\\":[{\\"filename\\":\\"b\\",\\"id\\":\\"0\\",\\"basename\\":\\"b\\"},{\\"filename\\":\\"c\\",\\"id\\":\\"1\\",\\"basename\\":\\"c\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 3`] = `
Array [
  Object {
    "basename": "b",
    "filename": "b",
    "id": "0",
  },
  Object {
    "basename": "c",
    "filename": "c",
    "id": "1",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 4`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(b)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(b)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 5`] = `
Array [
  Object {
    "level": "silly",
    "message": "removeSound(b)",
    "sounds": Array [
      Object {
        "basename": "a",
        "filename": "a",
        "id": "0",
      },
      Object {
        "basename": "c",
        "filename": "c",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"removeSound(b)\\",\\"sounds\\":[{\\"filename\\":\\"a\\",\\"id\\":\\"0\\",\\"basename\\":\\"a\\"},{\\"filename\\":\\"c\\",\\"id\\":\\"1\\",\\"basename\\":\\"c\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 6`] = `
Array [
  Object {
    "basename": "a",
    "filename": "a",
    "id": "0",
  },
  Object {
    "basename": "c",
    "filename": "c",
    "id": "1",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 7`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(c)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(c)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 8`] = `
Array [
  Object {
    "level": "silly",
    "message": "removeSound(c)",
    "sounds": Array [
      Object {
        "basename": "a",
        "filename": "a",
        "id": "0",
      },
      Object {
        "basename": "b",
        "filename": "b",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"removeSound(c)\\",\\"sounds\\":[{\\"filename\\":\\"a\\",\\"id\\":\\"0\\",\\"basename\\":\\"a\\"},{\\"filename\\":\\"b\\",\\"id\\":\\"1\\",\\"basename\\":\\"b\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 9`] = `
Array [
  Object {
    "basename": "a",
    "filename": "a",
    "id": "0",
  },
  Object {
    "basename": "b",
    "filename": "b",
    "id": "1",
  },
]
`;

exports[`modules -> sounds removeSound unknown file, no action 1`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(f)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(f)\\",\\"level\\":\\"debug\\"}",
  },
]
`;
